# oer-metadata

./: README.md  environment.yml  pyproject.toml
scripts/: demo_embeddings.py  embed_title_abs.py  example_queries.py  explore_embeddings.py  get_embed_strings.py  get_lecture_notes.py  load_data_into_db.py  process_resources.py  process_search_results.py
src/: metadb.py  project.py
